modified interface for sensors

--- a/otgc-android-1.2.0/otgc/src/main/res/layout/activity_devices.xml
+++ b/otgc-android-1.2.0/otgc/src/main/res/layout/activity_devices.xml
@@ -44,6 +44,7 @@
                 android:layout_weight="1"
                 android:background="@color/BLACK"
                 android:text="Temp"
+                android:focusable="true"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textSize="60dp" />
