--- a/otgc-android-1.2.0/otgc/src/main/res/values/styles.xml
+++ b/otgc-android-1.2.0/otgc/src/main/res/values/styles.xml
@@ -94,4 +94,8 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="GreenText" parent="@android:style/TextAppearance">
+        <item name="android:textColor">#00FF00</item>
+    </style>
+
 </resources>
